# elevator_project

./: CMakeLists.txt  README.md  main.cpp
algorithms/: CMakeLists.txt  algorithms.h
algorithms/src/: algorithms.cc
file_inputs/: input.txt  input1.txt
io/: CMakeLists.txt  input.h  output.h
io/src/: input.cc  output.cc
processing/: CMakeLists.txt  process.h
processing/src/: process.cc
utilities/: CMakeLists.txt  reader.h
utilities/src/: reader.cc
validation/: CMakeLists.txt  valid_inputs.h  validate_input.h
validation/src/: validate_input.cc
